--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.27.0",
+    "reactstrap": "^9.2.3",
     "redux": "5.0.1",
     "simplebar-react": "^3.2.6"
   },
