--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build": "vite build",
     "lint": "eslint \"src/**/*.js\"",
     "serve": "vite preview",
-    "start": "vite"
+    "start": "vite",
+    "dev": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
     "@coreui/chartjs": "^4.0.0",
@@ -32,7 +33,6 @@
     "chart.js": "^4.4.4",
     "classnames": "^2.5.1",
     "core-js": "^3.38.1",
-    "json-server": "^1.0.0-beta.3",
     "moment": "^2.30.1",
     "prop-types": "^15.8.1",
     "react": "^18.3.1",
@@ -56,6 +56,7 @@
     "eslint-plugin-prettier": "^5.2.1",
     "eslint-plugin-react": "^7.36.1",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "json-server": "^1.0.0-beta.3",
     "postcss": "^8.4.47",
     "prettier": "3.3.3",
     "sass": "^1.79.3",
